@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
+- ZMI: Removed the ability to create content from the ZMI. It was never
+  fully supported and carried the risk of creating half-formed content.
+
 - FSMetadata: Remove handling of .security and .properties metadata
   files which was supposed to have been removed in CMF 2.0 already.
 
